# tgshop

./: .gitignore  CMakeLists.txt  buf  func.h  interface.h  main.cpp  realize.cpp  stor  test.h  update_remote_production.sh  update_remote_test.sh
libs/botapi/: CMakeLists.txt
libs/botapi/header/: bot.h
libs/botapi/source/: bot.cpp
libs/data/: CMakeLists.txt  Item.cpp  Item.h  main.cpp
libs/json-develop/: CMakeLists.txt
